--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "global": "^4.4.0",
     "vue": "^2.6.14",
+    "vue-picture-swipe": "^2.1.0",
     "vuetify": "^2.6.9",
     "vuex": "^3.6.2"
   },
