--- a/front1/package.json
+++ b/front1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front",
+  "name": "front1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,12 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@mdi/js": "^7.0.96",
     "core-js": "^3.8.3",
-    "global": "^4.4.0",
     "vue": "^2.6.14",
     "vue-picture-swipe": "^2.1.0",
-    "vuetify": "^2.6.9",
+    "vue-router": "^3.5.1",
+    "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -21,6 +20,7 @@
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
