--- a/front1/package.json
+++ b/front1/package.json
@@ -15,7 +15,8 @@
     "vue-picture-swipe": "^2.1.0",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
