--- a/front1/package.json
+++ b/front1/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-cookies": "^1.8.1",
     "vue-geolocation-api": "^0.1.21",
     "vue-picture-swipe": "^2.1.0",
     "vue-router": "^3.5.1",
