--- a/front1/package.json
+++ b/front1/package.json
@@ -18,6 +18,7 @@
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
